# InternShannon

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN.md  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: desktop-linux-package.yml  desktop-macos-package.yml  desktop-windows-package.yml
apps/desktop/: .gitignore  CLAUDE.md  README.md  justfile  package.json
apps/desktop/frontend/: index.html
apps/desktop/scripts/: README-safeclaw-dmg.md  README-safeclaw-local-release.md  README.md  build-macos-dmg.sh  build-standalone-tauri.mjs  desktop-doctor-state.mjs  desktop-doctor-state.spec.mjs  desktop-doctor.mjs  fix-macos-bundle.mjs  repro-hook-crash.ts  safeclaw-local-release.sh  safeclaw-post-build.sh  setup-tauri-updater-secrets.sh  smoke-standalone-sidecar.mjs  smoke-test-agent.ts  stage-clawsentry-runtime.mjs  stage-node-runtime.mjs  stage-sidecar-resources.mjs  sync-core-skills.mjs  tauri-dev-state.mjs  tauri-dev-state.spec.mjs  tauri-dev.mjs  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: browser.rs  config.rs  lib.rs  main.rs  server.rs
apps/sidecar/: .gitignore  .swcrc  nest-cli.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.spec.json
apps/web/: .env.development  .env.example  .env.production  biome.json  components.json  package.json  rsbuild.config.ts  rsbuild.desktop.config.ts  rsbuild.shared.ts  tailwind.config.cjs  tsconfig.app.json
(+1002 files in other folders)
